[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/player_sprite.png" type="Texture" id=2]
[ext_resource path="res://assets/blast4.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/exp_part1.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 2 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1 )

[node name="Player" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_mask = 512
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PewPewCoolDown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="ExplosionParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 128
explosiveness = 1.0
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 16.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
angular_velocity = 10.0
angular_velocity_random = 1.0
orbit_velocity = 5.0
orbit_velocity_random = 1.0
linear_accel = 5.0
color_ramp = SubResource( 2 )

[connection signal="area_shape_entered" from="." to="." method="_on_Player_area_shape_entered"]
[connection signal="timeout" from="PewPewCoolDown" to="." method="_on_PewPewCoolDown_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
